--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bundled-es-modules/axios": "^0.27.2",
     "axois": "^0.0.1-security",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
