--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@bundled-es-modules/axios": "^0.27.2",
-    "axois": "^0.0.1-security",
+    "axois": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
